# image-processing-lab

SutherlandHodgman/: CMakeLists.txt  main.cpp
brensenhams_circle/: CMakeLists.txt  main.cpp
bresenhams_line/: CMakeLists.txt  main.cpp
cohen_shutterland/: CMakeLists.txt  main.cpp
dda_line/: CMakeLists.txt  main.cpp
midpoint_circle/: CMakeLists.txt  main.cpp
